# crypto_mob

./: Cargo.toml
appli_flutter/: pubspec.yaml
appli_flutter/android/app/: build.gradle
appli_flutter/android/app/src/main/: AndroidManifest.xml
appli_flutter/ios/Runner.xcodeproj/: project.pbxproj
appli_flutter/lib/: chat_app.dart  chat_screen.dart  main.dart
appli_flutter/linux/: CMakeLists.txt
appli_flutter/macos/Runner.xcodeproj/: project.pbxproj
appli_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
appli_flutter/macos/Runner/Configs/: AppInfo.xcconfig
appli_flutter/test/: widget_test.dart
appli_flutter/windows/: CMakeLists.txt
appli_flutter/windows/runner/: Runner.rc
src/: fonction.rs  helpers.rs  keys.rs  lib.rs  main.rs  signature.rs  signing.rs  signing2.rs  signingKnowledge.rs  verifying.rs  verifyingKnowledge.rs  x25519.rs
