[package]
name = "crypto_mob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
